src/snapshots/saltnitor__ui__tests__cpu_inspector_confirm.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 30 },
    content: [
        "┌ Fixture CPU 8-Core (16-Thread) & DDR5 ─────────┐┌ Top RAM Culprits ──────────────────────────────┐",
        "│ Uptime: 01h 01m   [RAM]  12.25/32.0 GB ██38%   ││    4242 operator llama-server      8.8G   5.7G │",
        "│ Swap:    0.50 GB  [SWP]   0.50/8.0  GB █  6%   ││    4300 operator saltnitor         0.1G    n/a │",
        "│[16-Thread Compute Load]                        ││                                                │",
        "│      6   12▁  18▁  24▂  30▂  36▃  42▃  48▄  54▄││                                                │",
        "│C0   C1   C2   C3   C4   C5   C6   C7   C8   C9 ││                                                │",
        "└────────────────────────────────────────────────┘└SIGKILL 4242 (llama-server)? [y/N]──────────────┘",
        "┌ Intelligent Log Analyzer ────────────────────────────────────────── [Port: Port 8080: LISTENING] ┐",
        "│   router started                                                                                 │",
        "│   model A_STD loaded                                                                             │",
        "│>> request served                                                                                 │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "┌ API Interrogator ────────────────────────────────────────────────────────────────[Target: A_STD] ┐",
        "│> {"model": "None", "messages": [{"role": "user", "content": "ping"}]}                            │",
        "│[TTFT: 0ms] [Eval: 0.0 t/s | Gen: 0.0 t/s] Ready. Press 'i' to focus console, Enter to fire.      │",
        "│                                                                                                  │",
        "└─────────────────────────────────────────────────────────── [Tab] Hot-Swap | [Press 'i' to focus] ┘",
        "┌──────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                [q] Quit  | [h] Help Menu  | [t] Deep Tuner  | [Esc] Close / Unfocus              │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 1, fg: Reset, bg: Cyan, underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 1, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 99, y: 1, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 23, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 28, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 33, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 38, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 43, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 4, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 48, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 5, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 6, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 99, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 92, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 97, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 24, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 44, y: 24, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 93, y: 24, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 50, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 70, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
