src/snapshots/saltnitor__ui__tests__dashboard_with_error.snap
---
source: src/ui.rs
expression: "render(&mut app, 100, 30)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 30 },
    content: [
        "┌ Fixture GPU 12GB VRAM Saturatio 6.50 / 12.0 GB ┐┌ Fixture CPU 8-Core (Current Load: 93%) ────────┐",
        "│████████████████████████ █                      ││            ▂▅▇           ▂▄▆           ▁▃▆     │",
        "└────────────────────────────────────────────────┘│        ▁▄▆████       ▁▃▅████        ▂▅▇███     │",
        "┌ DDR5 System RAM Spillover ──── 12.25 / 32.0 GB ┐│     ▃▅▇███████    ▂▄▇███████    ▁▄▆███████    ▁│",
        "│██████████████████                              ││ ▂▄▆███████████▁▃▆███████████ ▃▅▇██████████ ▂▄▇█│",
        "└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘",
        "┌ Intelligent Log Analyzer ─ ⚠ control_api: bind 127.0.0.1:8765 faile [Port: Port 8080: LISTENING] ┐",
        "│   router started                                                                                 │",
        "│   model A_STD loaded                                                                             │",
        "│>> request served                                                                                 │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "┌ API Interrogator ────────────────────────────────────────────────────────────────[Target: A_STD] ┐",
        "│> {"model": "None", "messages": [{"role": "user", "content": "ping"}]}                            │",
        "│TTFT: n/a | PP: n/a | TG: n/a Ready. Press 'i' to focus console, Enter to fire.                   │",
        "│                                                                                                  │",
        "└─────────────────────────────────────────────────────────── [Tab] Hot-Swap | [Press 'i' to focus] ┘",
        "┌──────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                [q] Quit  | [h] Help Menu  | [t] Deep Tuner  | [Esc] Close / Unfocus              │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 1, fg: Reset, bg: Green, underline: Reset, modifier: BOLD,
        x: 26, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 49, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 1, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 71, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 97, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 99, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 92, y: 22, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 97, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 24, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 24, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 24, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 50, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 28, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 70, y: 28, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
